[gd_scene load_steps=7 format=3 uid="uid://box7qgq2qvf7x"]

[ext_resource type="Theme" uid="uid://cdta86b2s4dni" path="res://assets/themes/global_theme.tres" id="1_j33uy"]
[ext_resource type="Script" path="res://menus/game_over/GameOver.gd" id="1_puqoj"]
[ext_resource type="Texture2D" uid="uid://deyqhxsmrfbmn" path="res://assets/ui/grid_background.png" id="3_8dyif"]
[ext_resource type="Texture2D" uid="uid://dsjpgnlgjiyti" path="res://assets/backgrounds/stage_esmuri.png" id="3_xv87b"]

[sub_resource type="Gradient" id="Gradient_j33uy"]
offsets = PackedFloat32Array(0.156604, 0.511321, 0.718868)
colors = PackedColorArray(1, 1, 1, 0, 0.932, 0.94, 0.962, 0.562, 0.929412, 0.937255, 0.960784, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8dyif"]
gradient = SubResource("Gradient_j33uy")
width = 1920
height = 1080
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="GameOver" type="Control" node_paths=PackedStringArray("StagesResult", "TimeResult", "ReshufflesResult", "ScoreResult", "MostClearedGroup", "MostCleared", "TimeRecordGroup", "BestTime", "ReshufflesRecordGroup", "BestReshuffles", "ScoreRecordGroup", "HighScore")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_j33uy")
script = ExtResource("1_puqoj")
StagesResult = NodePath("InnerControl/VBoxContainer/Subheader/HBoxContainer/Stages")
TimeResult = NodePath("InnerControl/VBoxContainer/Stats/TimeElapsed/GameTime/TimeResult")
ReshufflesResult = NodePath("InnerControl/VBoxContainer/Stats/Reshuffles/GameReshuffles/ReshuffleResult")
ScoreResult = NodePath("InnerControl/VBoxContainer/Stats/Score/GameScore/ScoreResult")
MostClearedGroup = NodePath("InnerControl/VBoxContainer/Subheader/MostStages")
MostCleared = NodePath("InnerControl/VBoxContainer/Subheader/MostStages/MostStages")
TimeRecordGroup = NodePath("InnerControl/VBoxContainer/Stats/TimeElapsed/BestTime")
BestTime = NodePath("InnerControl/VBoxContainer/Stats/TimeElapsed/BestTime/BestTime")
ReshufflesRecordGroup = NodePath("InnerControl/VBoxContainer/Stats/Reshuffles/BestReshuffles")
BestReshuffles = NodePath("InnerControl/VBoxContainer/Stats/Reshuffles/BestReshuffles/LowestReshuffles")
ScoreRecordGroup = NodePath("InnerControl/VBoxContainer/Stats/Score/HighScore")
HighScore = NodePath("InnerControl/VBoxContainer/Stats/Score/HighScore/HighScore")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.625812, 0.62679, 0.656139, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_xv87b")

[node name="GridPatternOverlay" type="TextureRect" parent="."]
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_8dyif")
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="GridPatternOverlay"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8dyif")

[node name="InnerControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 90.0
offset_top = 24.0
offset_right = -90.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="BottomRow" type="HBoxContainer" parent="InnerControl"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MainMenuButton" type="Button" parent="InnerControl/BottomRow"]
custom_minimum_size = Vector2(145, 0)
layout_mode = 2
text = "MAIN MENU"
alignment = 0

[node name="NewGameButton" type="Button" parent="InnerControl/BottomRow"]
custom_minimum_size = Vector2(145, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "BEGIN AGAIN"
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InnerControl"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -174.5
offset_right = 180.0
offset_bottom = 174.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="InnerControl/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeadingLabel"
theme_override_font_sizes/font_size = 64
text = "The Surface"
horizontal_alignment = 1
uppercase = true

[node name="Subheader" type="VBoxContainer" parent="InnerControl/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="InnerControl/VBoxContainer/Subheader"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InnerControl/VBoxContainer/Subheader"]
layout_mode = 2

[node name="Stat" type="Label" parent="InnerControl/VBoxContainer/Subheader/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Stages Cleared"
uppercase = true

[node name="Stages" type="Label" parent="InnerControl/VBoxContainer/Subheader/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="MostStages" type="HBoxContainer" parent="InnerControl/VBoxContainer/Subheader"]
visible = false
layout_mode = 2

[node name="Stat" type="Label" parent="InnerControl/VBoxContainer/Subheader/MostStages"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Most Cleared"
uppercase = true

[node name="MostStages" type="Label" parent="InnerControl/VBoxContainer/Subheader/MostStages"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="InnerControl/VBoxContainer/Subheader"]
layout_mode = 2

[node name="Stats" type="VBoxContainer" parent="InnerControl/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TimeElapsed" type="VBoxContainer" parent="InnerControl/VBoxContainer/Stats"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="GameTime" type="HBoxContainer" parent="InnerControl/VBoxContainer/Stats/TimeElapsed"]
layout_mode = 2

[node name="Stat" type="Label" parent="InnerControl/VBoxContainer/Stats/TimeElapsed/GameTime"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Time"
uppercase = true

[node name="TimeResult" type="Label" parent="InnerControl/VBoxContainer/Stats/TimeElapsed/GameTime"]
layout_mode = 2
size_flags_horizontal = 3
text = "00:00:00"
horizontal_alignment = 2

[node name="BestTime" type="HBoxContainer" parent="InnerControl/VBoxContainer/Stats/TimeElapsed"]
visible = false
layout_mode = 2

[node name="Stat" type="Label" parent="InnerControl/VBoxContainer/Stats/TimeElapsed/BestTime"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "BestTime"
uppercase = true

[node name="BestTime" type="Label" parent="InnerControl/VBoxContainer/Stats/TimeElapsed/BestTime"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "00:00:00"
horizontal_alignment = 2

[node name="Reshuffles" type="VBoxContainer" parent="InnerControl/VBoxContainer/Stats"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="GameReshuffles" type="HBoxContainer" parent="InnerControl/VBoxContainer/Stats/Reshuffles"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Stat" type="Label" parent="InnerControl/VBoxContainer/Stats/Reshuffles/GameReshuffles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Reshuffles"
uppercase = true

[node name="ReshuffleResult" type="Label" parent="InnerControl/VBoxContainer/Stats/Reshuffles/GameReshuffles"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="BestReshuffles" type="HBoxContainer" parent="InnerControl/VBoxContainer/Stats/Reshuffles"]
visible = false
layout_mode = 2

[node name="Stat" type="Label" parent="InnerControl/VBoxContainer/Stats/Reshuffles/BestReshuffles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Lowest Reshuffles"
uppercase = true

[node name="LowestReshuffles" type="Label" parent="InnerControl/VBoxContainer/Stats/Reshuffles/BestReshuffles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 2

[node name="Score" type="VBoxContainer" parent="InnerControl/VBoxContainer/Stats"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="GameScore" type="HBoxContainer" parent="InnerControl/VBoxContainer/Stats/Score"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Stat" type="Label" parent="InnerControl/VBoxContainer/Stats/Score/GameScore"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Score"
uppercase = true

[node name="ScoreResult" type="Label" parent="InnerControl/VBoxContainer/Stats/Score/GameScore"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "0"
horizontal_alignment = 2

[node name="HighScore" type="HBoxContainer" parent="InnerControl/VBoxContainer/Stats/Score"]
visible = false
layout_mode = 2

[node name="Stat" type="Label" parent="InnerControl/VBoxContainer/Stats/Score/HighScore"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "High Score"
uppercase = true

[node name="HighScore" type="Label" parent="InnerControl/VBoxContainer/Stats/Score/HighScore"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 2

[connection signal="pressed" from="InnerControl/BottomRow/MainMenuButton" to="." method="on_main_menu_button_pressed"]
[connection signal="pressed" from="InnerControl/BottomRow/NewGameButton" to="." method="on_new_game_button_pressed"]
